--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@
 
 @layer components {
   .btn-primary {
-    @apply bg-violet-600 text-white hover:bg-violet-800 rounded-md py-1 px-3 mx-4 font-medium;
+    @apply bg-violet-600 text-white hover:bg-violet-800 rounded-md py-1 px-3 mx-4 hover:cursor-pointer font-semibold;
+  }
+  .btn-primary-edit {
+    @apply bg-green-300 text-black  hover:bg-green-400 rounded-md py-1 px-3 mx-4 hover:cursor-pointer font-semibold;
+  }
+  .btn-primary-delete {
+    @apply bg-red-300 text-black hover:bg-red-400 rounded-md py-1 px-3 mx-4 hover:cursor-pointer font-semibold;
   }
 }
